eval.c: preserve errinfo

* eval.c (setup_exception): preserve errinfo across calling #to_s
  method on the exception.  [ruby-core:61091] [Bug #9568]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@45180 b2dd03c8-39d4-4d8f-98ff-823fe69b080e